# pbg-readdy

./: .gitignore  README.md  index.html  pyproject.toml
demo/: composite_report.py  demo_report.py  readdy-demo-report.html  readdy-demo-with-viz-report.html  report.html
pbg_readdy/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_readdy/composites/: __init__.py  readdy-demo-with-viz.composite.yaml  readdy-demo.composite.yaml
tests/: test_composites.py  test_processes.py
