[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-readdy"
version = "0.1.0"
description = "Process-bigraph wrapper for the ReaDDy particle-based reaction-diffusion simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "process-bigraph>=1.0",
    "bigraph-schema>=1.0",
    "pbg-superpowers",
    "readdy>=2.0",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bigraph-viz",
    "matplotlib",
]

[tool.uv.sources]
pbg-superpowers = { git = "https://github.com/vivarium-collective/pbg-superpowers.git", branch = "main" }

[tool.setuptools.packages.find]
include = ["pbg_readdy*"]
